--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,9 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     splits {
         abi {
             reset()
@@ -122,7 +125,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -131,13 +134,17 @@ android {
         }
     }
 }
-
+configurations.all {
+    resolutionStrategy {
+        force 'com.squareup.okhttp3:okhttp:3.4.1'
+    }
+}
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:25.3.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     //TODO change to release version
-    compile 'com.github.ZiggeoJitpackService:Android-SDK:61a7c31a38'
+    compile 'com.github.ZiggeoJitpackService:Android-SDK:80b6d50e45'
 }
 
 // Run this once to be able to run the application with BUCK
