--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:25.3.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile "com.google.code.gson:gson:2.8.1"
     //TODO change to release version
     compile 'com.github.ZiggeoJitpackService:Android-SDK:8d55ebb608'
 }
