--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,8 +144,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:25.3.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile "com.google.code.gson:gson:2.8.1"
-    //TODO change to release version
-    compile 'com.github.ZiggeoJitpackService:Android-SDK:8d55ebb608'
+    compile 'com.github.ZiggeoJitpackService:Android-SDK:0.67.0'
 }
 
 // Run this once to be able to run the application with BUCK
