--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         minSdkVersion 16
@@ -34,7 +34,8 @@ dependencies {
    compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:25.3.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile "com.google.code.gson:gson:2.8.1"
-    compile 'com.github.ZiggeoJitpackService:Android-SDK:0.67.3'
+    compile "com.google.code.gson:gson:2.8.2"
+    compile 'com.github.ZiggeoJitpackService:Android-SDK:0.70.0'
+    compile 'com.karumi:dexter:4.1.0'
 }
   
