--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,22 +2,23 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -28,14 +29,15 @@ android {
 
 repositories {
     mavenCentral()
+    google()
 }
 
 dependencies {
    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:25.3.1"
+    compile "com.android.support:appcompat-v7:27.0.2"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile "com.google.code.gson:gson:2.8.2"
-    compile 'com.github.ZiggeoJitpackService:Android-SDK:0.71.1'
-    compile 'com.karumi:dexter:4.1.0'
+    compile 'com.github.ZiggeoJitpackService:Android-SDK:0.71.7'
+    compile 'com.karumi:dexter:4.2.0'
 }
   
