--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
 
@@ -20,7 +20,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 5
-        versionName "1.1.7"
+        versionName "1.1.8"
     }
     lintOptions {
         abortOnError false
@@ -33,11 +33,12 @@ repositories {
 }
 
 dependencies {
-   compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:27.0.2"
-    compile "com.facebook.react:react-native:+"  // From node_modules
-    compile "com.google.code.gson:gson:2.8.2"
-    compile 'com.github.ZiggeoJitpackService:Android-SDK:0.72.1'
-    compile 'com.karumi:dexter:4.2.0'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation 'com.android.support:design:27.1.1'
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.google.code.gson:gson:2.8.2"
+    implementation 'com.github.ZiggeoJitpackService:Android-SDK:0.73.6'
+    implementation 'com.karumi:dexter:4.2.0'
 }
   
