Added missing repository dependency.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,8 +19,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 9
-        versionName "1.2.0"
+        versionCode 10
+        versionName "1.2.1"
     }
     lintOptions {
         abortOnError false
@@ -36,6 +36,7 @@ android {
 }
 
 repositories {
+    maven { url 'https://jitpack.io' }
     mavenCentral()
     google()
 }
