--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
     }
 }
 
@@ -39,6 +39,7 @@ repositories {
     maven { url 'https://jitpack.io' }
     mavenCentral()
     google()
+
 }
 
 dependencies {
@@ -47,7 +48,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation 'com.github.ZiggeoJitpackService:Android-SDK:0.77.1'
+    implementation 'com.github.ZiggeoJitpackService:Android-SDK:aee2258030'
     implementation 'com.karumi:dexter:4.2.0'
 }
   
