--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,11 +48,12 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation "com.android.support:appcompat-v7:28.0.0"
     implementation 'com.android.support:design:28.0.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation 'com.github.ZiggeoJitpackService:Android-SDK:0.79.4'
-    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.github.ZiggeoJitpackService:Android-SDK:0.79.7'
+    implementation 'com.karumi:dexter:5.0.0'
 }
   
