--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     ]
   ],
   "_from": "git+https://github.com/Ziggeo/ReactNativeSDK.git",
-  "_id": "react-native-ziggeo-library@1.3.11-beta1",
+  "_id": "react-native-ziggeo-library@1.3.11",
   "_inCache": true,
   "_location": "/react-native-ziggeo-library",
   "_phantomChildren": {},
@@ -94,5 +94,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.3.11-beta1"
+  "version": "1.3.11"
 }
