--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-ziggeo-library",
   "title": "React Native Test Lib",
-  "version": "1.3.11",
+  "version": "1.3.11_rc0",
   "description": "We will presume that you are already familiar and have set up everything needed for the React Native setup on your system.  If not, we can suggest checking up the following [pages](https://facebook.github.io/react-native/docs/getting-started.html):",
   "main": "index.js",
   "scripts": {
