--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "title": "React Native Ziggeo SDK",
-  "version": "1.3.12-rc1"
+  "version": "1.3.12"
 }
