--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,10 +63,9 @@ repositories {
 
 dependencies {
     implementation "com.facebook.react:react-native:${safeExtGet('reactnativeVersion', '+')}"
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation "com.android.support:appcompat-v7:28.0.0"
-    implementation 'com.android.support:design:28.0.0'
-    implementation "com.google.code.gson:gson:2.8.5"
-    implementation 'com.github.ZiggeoJitpackService:Android-SDK:0.80.2'
+    def androidX = '1.1.0'
+    implementation "androidx.appcompat:appcompat:$androidX"
+    implementation "com.google.code.gson:gson:2.8.6"
+    implementation 'com.github.ZiggeoJitpackService:Android-SDK:0.83.0_rc3'
     implementation 'com.karumi:dexter:5.0.0'
 }
