--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,7 +66,6 @@ dependencies {
     def androidX = '1.1.0'
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.code.gson:gson:2.8.6"
-    // replace with exact number when jitpack will be able to build it
-    implementation 'com.github.ZiggeoJitpackService:Android-SDK:06c6a031a95cbcb10964989243c681d5679f1e14'
+    implementation 'com.github.ZiggeoJitpackService:Android-SDK:rc2_1.0.0'
     implementation 'com.karumi:dexter:5.0.0'
 }
