--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     def androidX = '1.1.0'
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.code.gson:gson:2.8.6"
-    implementation 'com.github.ZiggeoJitpackService:Android-SDK:rc7_1.0.0'
+    // TODO
+    implementation 'com.github.ZiggeoJitpackService:Android-SDK:fc3220a4cf33d4af23ac745e259a821bde535d4a'
     implementation 'com.karumi:dexter:6.0.1'
 }
