--- a/android/build.gradle
+++ b/android/build.gradle
@@ -71,8 +71,12 @@ dependencies {
     def androidX = '1.2.0'
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.code.gson:gson:2.8.6"
-    implementation("com.github.ZiggeoJitpackService:Android-SDK:2.6.4:reactnativeblur@aar") {
+    implementation ('com.github.ZiggeoJitpackService:android-sdk-reactnativeblur:2.6.4.2') {
         transitive = true
     }
+    //todo old implementation
+//    implementation("com.github.ZiggeoJitpackService:Android-SDK:2.6.4:reactnativeblur@aar") {
+//        transitive = true
+//    }
     implementation 'com.karumi:dexter:6.2.1'
 }
