update screen recording function

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -62,6 +63,7 @@ repositories {
 
     google()
     jcenter()
+    mavenCentral()
     maven { url 'https://www.jitpack.io' }
 }
 
@@ -71,7 +73,7 @@ dependencies {
     def androidX = '1.2.0'
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.code.gson:gson:2.8.6"
-    implementation ('com.ziggeo.androidsdk:reactnativeblur:2.6.6') {
+    implementation('com.ziggeo:android-sdk-reactnativeblur:2.6.11') {
         transitive = true
     }
     //todo old implementation
